[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
tokio = { version = "1.24.2", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
async-trait = "0.1.63"

[dev-dependencies]
mockall = "0.11.3"
factori = "1.1.0"